# companion

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  FEATURES.md  LICENSE  NEXT_TIME.md  PRIVACY.md  README.md  STORE-LISTING.md  TASKS.md  backlog.md  package-lock.json  plan.md  todo.md
.claude/: secrets.env.example  settings.local.json
.claude/commands/: apk.md  commit.md  deb.md  dev-apk.md  down.md  file.md  ideas.md  ios.md  plan.md  sentry.md  tdd.md  test.md  todo.md  up.md  work.md
.github/workflows/: ci.yml  release.yml
app/: .eslintrc.js  .gitignore  .prettierrc  App.tsx  GoogleService-Info.plist  android-debug.keystore  app.config.js  app.json  credentials.json  eas.json  jest.config.js  package-lock.json  package.json
app/__tests__/: jest.setup.ts
app/android/: settings.gradle
app/ios/: Podfile
app/plugins/: withFirebaseModularHeaders.js
concierge/: .mcp.json.template  CLAUDE.md  projects.json
daemon/: .eslintrc.js  jest.config.js  package-lock.json  package.json
daemon/__tests__/: code-review.test.ts  multi-session.test.ts  parser.test.ts  push.test.ts  scaffold-commands.test.ts  scaffold-scorer.test.ts  session-management.test.ts  skill-catalog.test.ts  skill-scanner.test.ts  usage-tracker.test.ts  watcher.test.ts  websocket.test.ts  work-group-manager.test.ts  worktree.test.ts
daemon/scripts/: build.sh  install-curl.sh  install-remote.sh  install.sh  (+2 more)
desktop/: package-lock.json  package.json
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json  desktop.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/plugins/tauri-plugin-fcm/: .gitignore  Cargo.toml  build.rs
desktop/src-tauri/plugins/tauri-plugin-fcm/android/: build.gradle.kts
desktop/src-tauri/plugins/tauri-plugin-fcm/android/src/main/: AndroidManifest.xml
desktop/src-tauri/plugins/tauri-plugin-fcm/android/src/main/java/com/hexidecibel/companion/fcm/: FcmPlugin.kt  FcmService.kt
desktop/src-tauri/plugins/tauri-plugin-fcm/permissions/: default.toml
desktop/src-tauri/plugins/tauri-plugin-fcm/permissions/autogenerated/: reference.md
desktop/src-tauri/plugins/tauri-plugin-fcm/permissions/autogenerated/commands/: is_notification_permission_granted.toml
desktop/src-tauri/plugins/tauri-plugin-fcm/permissions/schemas/: schema.json
desktop/src-tauri/plugins/tauri-plugin-fcm/src/: error.rs  lib.rs  mobile.rs
desktop/src-tauri/src/: desktop.rs  lib.rs  main.rs
docs/: ARCHITECTURE.md  DEVELOPMENT.md  NOTIFICATIONS.md  ROADMAP-V2.md  SESSION-CONTROLS.md  TECHNICAL.md  orchestrator-design.md
mcp/: README.md  package-lock.json  package.json
web/: app.js  index.html  package-lock.json  package.json  styles.css  vite.config.ts
(+297 files in other folders)
