[package]
name = "companion-desktop"
version = "0.1.0"
description = "Companion — desktop & mobile app"
edition = "2021"

[lib]
name = "companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-fcm = { path = "plugins/tauri-plugin-fcm" }
log = "0.4"

# Desktop-only plugins (tray, menu, window state, autostart)
[target.'cfg(not(target_os = "android"))'.dependencies]
tauri-plugin-window-state = "2"
tauri-plugin-autostart = "2"
