[package]
name = "tauri-plugin-fcm"
version = "0.1.0"
edition = "2021"
description = "Tauri plugin for Firebase Cloud Messaging (Android) and APNs (iOS)"
links = "tauri-plugin-fcm"

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }

[dependencies]
tauri = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
thiserror = "1"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
